<resources>
    <string name="app_name" translatable="false">TheHiker</string>
    <string name="app_title" translatable="false">The Hiker</string>
    <string name="splashscreen_descriptor">cartoon_nature</string>
    <string name="humidity_title">Humidity</string>
    <string name="altitude_title">Your Altitude:</string>
    <string name="speed_title">Moving speed:</string>
    <string name="altitude_userinfo">*altitude above sea level is displayed in meters</string>
    <string name="humidity_userinfo">*relative humidity in percent</string>
    <string name="speed_userinfo">*the indoor speed ist not accurate</string>
    <string name="altitude">Altitude</string>
    <string name="find_me">Find me</string>
    <string name="pedometer">Pedometer</string>
    <string name="speed_of_moving">Speed</string>
    <string name="main_menu_header_image">main menu header image</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="pedo_meter_image" translatable="false">Pedo Meter Image</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="russian">русский</string>
    <string name="english">English</string>
    <string name="title_activity_position_on_map">Map</string>
    <string name="my_location_label_text">My Location</string>
    <string name="meters">m</string>
    <string name="map_logo">Map logo</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_title">Current Temperature:</string>
    <string name="humidity">Humidity Icon</string>
    <string name="default_no_sensor_data_yet" translatable="false">---</string>
    <string name="sms_message_sos">SOS!</string>
    <string name="sms_message_emergency_over">Emergency state is over!</string>
    <string name="title_activity_sos_message" translatable="false">SosMessageActivity</string>
    <string name="title_permission_alert">Permission Alert</string>
    <string name="permission_alert_message">This feature needs the following permission(s):</string>
    <string name="permission_alert_query">Would you like to change it in the settings?</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>
    <string name="sos_btn">SOS message</string>
    <string name="stop_sos">STOP SOS</string>
    <string name="sos_img_caption">SOS splashart</string>
    <string name="title_SOS_alert">Add Emergency Contact</string>
    <string name="phonenumber1">Phone Number One</string>
    <string name="phonenumber2">Phone Number Two</string>
    <string name="number_wrong">Please enter a valid number</string>
</resources>