...
                    app:srcCompat="@drawable/ic_altitude"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/altitude"
                    app:tint="@color/primary"/>

                <Button
                    android:id="@+id/btn_altitude"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Button.MainMenuButton"
                    android:onClick="navigateTo"
                    android:text="@string/altitude"/>
            </LinearLayout>

            <LinearLayout
...
                    app:srcCompat="@drawable/ic_map"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/find_me"
                    app:tint="@color/primary"/>

                <Button
                    android:id="@+id/btn_position_on_map"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Button.MainMenuButton"
                    android:onClick="navigateTo"
                    android:text="@string/find_me"/>

            </LinearLayout>

...
